manifests/instances/core/inference/frontend/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mnist-webapp
  labels:
    app: mnist-webapp
spec:
  port:
    targetPort: 8080 
  to:
    kind: Service
    name: mnist-webapp
  tls:
    termination: edge
  wildcardPolicy: None
